plugins {
    // Declared at root with apply false — submodules apply it themselves via allprojects
    id 'net.fabricmc.fabric-loom' version "${loom_version}" apply false
}

// ── Shared config for ALL projects (root + submodules) ──────────────
allprojects {
    apply plugin: 'maven-publish'
    apply plugin: 'net.fabricmc.fabric-loom'

    group   = 'com.sypztep'
    def injected = project.findProperty("version")
    version = (injected && injected != "unspecified") ? injected : project.mod_version

    repositories {
        // add shared repos here if needed
    }

    dependencies {
        minecraft "com.mojang:minecraft:${project.minecraft_version}"
        api "net.fabricmc:fabric-loader:${project.loader_version}"
        api fabricApi.module("fabric-api-base", project.fabric_version)
    }

    processResources {
        inputs.property "version", project.version

        filesMatching("fabric.mod.json") {
            expand "version": inputs.properties.version
        }
    }

    java {
        withSourcesJar()
        sourceCompatibility = JavaVersion.VERSION_25
        targetCompatibility = JavaVersion.VERSION_25
    }

    tasks.withType(JavaCompile).configureEach {
        it.options.release = 25
    }

    jar {
        inputs.property "projectName", project.name
        from(rootProject.file("LICENSE")) {
            rename { "${it}_${project.name}" }
        }
    }
}

base {
    archivesName = "PlateauLib"
}

// ── Bundle all submodules into root JAR (Jar-in-Jar, like Fabric API) ──
// ── Submodule-only config (root project excluded) ───────────────────
subprojects {
    version = rootProject.version

    publishing {
        publications {
            create("mavenJava", MavenPublication) {
                from components.java
            }
        }
        repositories {}
    }

    afterEvaluate { proj ->
        proj.publishing.publications.named("mavenJava", MavenPublication) {
            artifactId = proj.base.archivesName.get()
        }
    }
}
// ── Root project's own publishing (separate from subprojects) ────────
publishing {
    publications {
        create("mavenJava", MavenPublication) {
            from components.java
        }
    }
    repositories {
    }
}
